--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
-httpport = 8080
-ViewsPath = "../tpl"
+httpport = 80
+ViewsPath = "tpl"
 SessionOn = true
 DirectoryIndex = true
 EnableAdmin = true
