--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,3 +2,11 @@ httpport = 3001
 ViewsPath = "tpl"
 SessionOn = true
 EnableAdmin = true
+
+[db]
+type = "mongo"
+host = "localhost"
+name = "cms_go"
+user = 
+pwd = 
+port = 27017
