--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,6 +2,8 @@ httpport = 3001
 ViewsPath = "tpl"
 SessionOn = true
 EnableAdmin = true
+TemplateLeft = "[["
+TemplateRight = "]]"
 
 [db]
 type = "mongo"
